--- a/acme-campaigns-frontend/package.json
+++ b/acme-campaigns-frontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^8.0.1",
     "@mantine/modals": "^8.0.1",
     "@mantine/notifications": "^8.0.1",
+    "@tabler/icons-react": "^3.31.0",
     "dayjs": "^1.11.13",
     "next": "15.3.2",
     "react": "^19.0.0",
