--- a/acme-campaigns-frontend/package.json
+++ b/acme-campaigns-frontend/package.json
@@ -16,7 +16,10 @@
     "@mantine/modals": "^8.0.1",
     "@mantine/notifications": "^8.0.1",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.76.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "mantine-form-zod-resolver": "^1.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
